[project]
authors = [
    {name = "Martin Teichmann", email = "martin.teichmann@gmail.com"},
]
description = 'An EtherCAT master written in Python using EBPF and XDP'
name = "ebpfcat"
version = "1.0.0"
readme = "README.rst"
license = "GPL-2.0-or-later"
dependencies = []

[project.scripts]
ec-scanbus = "ebpfcat.scripts:scanbus"
ec-info = "ebpfcat.scripts:info"
ec-eeprom = "ebpfcat.scripts:eeprom"
ec-create-test = "ebpfcat.scripts:create_test"
